# msensor-library

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/dev/: devcontainer.json
.devcontainer/envoy/: devcontainer.json  docker-compose.yml  envoy.yaml
.github/workflows/: build.yml
cfg/: mid360_config.json
cmake/: aarch64.cmake  findGRPC.cmake  format.cmake  toolchains.json
docker/: DockerfileRuntime  Dockerfile_rplidar  entrypoint.sh
docs/: arch.puml  imu_server.puml  lidar_server.puml
grpc/: CMakeLists.txt  colormap.hh  conversions.cc  conversions.hh  get_points.service.cc  get_points_service.cc  get_points_service.hh  gl_proxy.cc  gl_publisher.cc  gl_publisher.hh  grpc_publisher.cc  grpc_publisher.hh  grpc_server.cc  grpc_server.hh  sensors_client.cc  sensors_client.hh  sensors_remote_client.cc  sensors_remote_client.hh  sensors_server.cc  sensors_server.hh  sensors_service.cc  sensors_service.hh  slam_publisher.cc  slam_publisher.hh
grpc/proto/: opengl_srv_points.proto  points.proto
include/: CMakeLists.txt  ILidar.hh  RPLidar.hh  ScanRecorder.hh  SensorData.hh  simLidar.hh
include/adc/: ADS1115.hh
include/file/: File.hh  IFile.hh
include/imu/: IImu.hh  SimImu.hh  icm-20948.h
include/interface/: IAdc.hh  IFile.hh  IImu.hh  ILidar.hh
include/lidar/: ILidar.hh  Mid360.hh  RPLidar.hh  SimLidar.hh  a  simLidar.hh
include/recorder/: ScanPlayer.hh  ScanRecorder.hh
include/timing/: timing.hh
proto/: CMakeLists.txt  sensors.proto
src/: RPLidar.cc  ScanRecorder.cc  ads1115_publisher.cc  all_publisher.cc  app.cc  converter.hh  icm20948_publisher.cc  main.cc  main_test.cc  mid360_publisher.cc  rplidar_publisher.cc  scan_parser.cc  sensor_publisher.cc  simLidar.cc  sim_publisher.cc
src/adc/: ADS1115.cc  CMakeLists.txt
src/file/: CMakeLists.txt  File.cc
src/imu/: CMakeLists.txt  SimImu.cc  icm-20948.cc
src/lidar/: CMakeLists.txt  ILidar.cc  RPLidar.cc  mid360.cc  simLidar.cc
src/recorder/: CMakeLists.txt  ScanChecker.cc  ScanPlayer.cc  ScanRecorder.cc
src/timing/: CMakeLists.txt  timing.cc
test/: CMakeLists.txt  draft.cc
test/client/: README.md  client.py  client_ads.py  client_imu.py  client_imu_fusion_viz.py  client_imu_viz.py  client_lidar.py  client_lidar_viz.py  pyproject.toml  requirements.txt  robot.proto  robot_control.py
test/client/proto_gen/: plot_pb2.py  plot_pb2_grpc.py  robot_pb2.py  robot_pb2.pyi  robot_pb2_grpc.py  sensors_pb2.py  sensors_pb2.pyi  sensors_pb2_grpc.py
test/mocks/: IFileMock.hh
test/src/: test_client_server.cc  test_recorder.cc  test_server.cc
